# vitmma19-pw-template

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
notebook/: 01-data-exploration.ipynb
src/: 01-data-preprocessing.py  02-baseline-training.py  02-training.py  03-evaluation.py  04-hyperparameter-search.py  04-inference.py  05-overfit-test.py  api.py  config.py  dataset.py  evaluation.py  features.py  models.py
src/frontend/: index.html
